@@ -1,9 +1,17 @@
-plugindir = $(libdir)/subtitleeditor/plugins/actions
+SE_PLUGIN_NAME = externalvideoplayer
+
+SE_PLUGIN_PATH_DEV = plugins/actions/$(SE_PLUGIN_NAME)
+SE_PLUGIN_PATH_LIB = $(PACKAGE_PLUGIN_DIR)/actions/
+SE_PLUGIN_PATH_GLADE = $(PACKAGE_SHARE_DIR)/plugins/$(SE_PLUGIN_NAME)
 
 INCLUDES = \
 					 -I$(top_srcdir) \
 					 -I$(top_srcdir)/src \
-					 $(SUBTITLEEDITOR_CFLAGS)
+					 $(SUBTITLEEDITOR_CFLAGS) \
+					 -DSE_PLUGIN_PATH_DEV=\"$(SE_PLUGIN_PATH_DEV)\" \
+					 -DSE_PLUGIN_PATH_GLADE=\"$(SE_PLUGIN_PATH_GLADE)\"
+
+plugindir = $(SE_PLUGIN_PATH_LIB)
 
 plugin_LTLIBRARIES = libexternalvideoplayer.la
 
@@ -13,13 +21,18 @@ libexternalvideoplayer_la_SOURCES = \
 libexternalvideoplayer_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS)
 libexternalvideoplayer_la_LIBADD = $(SUBTITLEEDITOR_LIBS)
 
+
+gladedir = $(SE_PLUGIN_PATH_GLADE)
+glade_DATA = dialog-external-video-player-preferences.glade
+
+
 plugin_in_files = externalvideoplayer.se-plugin.desktop.in
 
 %.se-plugin: %.se-plugin.desktop.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
 
 plugin_DATA = $(plugin_in_files:.se-plugin.desktop.in=.se-plugin)
 
-EXTRA_DIST = $(plugin_in_files)
+EXTRA_DIST = $(glade_DATA) $(plugin_in_files)
 
 CLEANFILES = $(plugin_DATA)
 DISTCLEANFILES = $(plugin_DATA)
