@@ -1,5 +1,12 @@
 2008-11-08  kitone  <kitone@gna.org>
 
+	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
+	* plugins/actions/externalvideoplayer/Makefile.am:
+	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade:
+	Add preferences dialog.
+
+2008-11-08  kitone  <kitone@gna.org>
+
 	* src/ExtensionManager.cc:
 	Add a test in load_path.
 
